--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Pedido Bifano</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Encomenda Bifano</title>
   </head>
-  <body class="bg-white text-gray-800">
+  <body>
     <div id="root"></div>
     <script type="module" src="./src/main.jsx"></script>
   </body>
