--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt">
   <head>
@@ -8,6 +7,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./src/main.jsx"></script>
+    <!-- O Vite vai injetar o script correto aqui automaticamente -->
   </body>
 </html>
